--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ script:
   - bash -xve ./test/travis_ros_install.bash
   - source ~/catkin_ws/devel/setup.bash
   - bash -xve ./test/travis_package_make.bash
+  - sudo chmod 777 /dev/
   - rostest pimouse_ros pimouse.launch
